--- a/be-brink-rest/pom.xml
+++ b/be-brink-rest/pom.xml
@@ -99,5 +99,12 @@
             <version>2.20.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>6.5.0.202303070854-r</version>
+        </dependency>
+
+
     </dependencies>
 </project>
