--- a/be-brink-rest/src/main/resources/application.properties
+++ b/be-brink-rest/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
+spring.servlet.multipart.max-file-size=100GB
+spring.servlet.multipart.max-request-size=100GB
