--- a/be-brink-rest/pom.xml
+++ b/be-brink-rest/pom.xml
@@ -99,7 +99,23 @@
             <version>2.20.0</version>
         </dependency>
 
+
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>8.0.0</version> <!-- Use the latest version -->
+        </dependency>
+
+
+
+        <dependency>
+
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
             <version>4.11.0.201803080745-r</version>
