--- a/be-brink-rest/src/main/resources/application-dev.properties
+++ b/be-brink-rest/src/main/resources/application-dev.properties
@@ -13,3 +13,4 @@ spring.datasource.hikari.maximumPoolSize=5
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
+spring.bri
